# pipkg

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
src/pipkg/: __init__.py  activate.py  cli.py  lockfile.py  manifest.py  resolver.py  venv_utils.py
src/ppm/: __init__.py  activate.py  cli.py  lockfile.py  manifest.py  resolver.py  venv_utils.py
