[project]
name = "ppm"
version = "0.1.0"
description = "Gestor de dependencias para Python, inspirado en npm/pnpm, usa pip por debajo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Neftaligc" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "tomlkit>=0.12",
]

[project.urls]
Homepage = "https://github.com/Neftaligc/ppm"
Repository = "https://github.com/Neftaligc/ppm"

[project.scripts]
ppm = "ppm.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]